[tool.poetry]
name = "shoppingcart"
version = "0.1.0"
description = ""
authors = ["Marwan <marwan.hossam@gmail.com>"]
readme = "README.md"
[tool.isort]
atomic = true
profile = "black"
line_length = 120

[tool.black]
line_length = 120

[tool.flakehell]  # https://flakehell.readthedocs.io/config.html
format = "grouped"
show_source = true
statistics = false
doctests = true
exclude = ["venv"]
baseline = ".flakehell_baseline"  # remember current project state and show only new errors
extended_default_ignore = []  # https://github.com/flakehell/flakehell/issues/10
max_complexity = 12
max_line_length = 120

[tool.flakehell.plugins]
"flake8-*" = ["+*"]
flake8-bugbear = ["+*", "-B008"]
flake8-use-fstring = ["+*", "-FS003"]
flake8-isort = ["-*"]
mccabe = ["+*"]
nitpick = ["+*"]
pycodestyle = ["+*", "-E203", "-E722", "-W503"]
pyflakes = ["+*", "-F811"]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.0"

[tool.poetry.group.dev.dependencies]
flakehell = "^0.9.0"
isort = "^5.10.1"
black = "^22.10.0"
autoflake = "^1.4"
flynt = "^0.77"
flake8 = "3.9.0"
flake8-bugbear = "^22.10.27"
flake8-comprehensions = "^3.10.1"
flake8-use-fstring = "^1.4"
flake8-isort = "^5.0.3"
flake8-black = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
